// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svgo > invalid > Invalid #0: js2svg default 1`] = `
[
  {
    "column": 1,
    "endColumn": 27,
    "endLine": 3,
    "fix": {
      "range": [
        117,
        143,
      ],
      "text": "<!--Created with love!",
    },
    "line": 3,
    "message": "Replace \`··<!--·Created·with·love!·\` with \`<!--Created·with·love!\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        373,
        373,
      ],
      "text": "
",
    },
    "line": 11,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #1: js2svg pretty false 1`] = `
[
  {
    "column": 39,
    "endColumn": 1,
    "endLine": 11,
    "fix": {
      "range": [
        38,
        367,
      ],
      "text": "<svg xmlns="http://www.w3.org/2000/svg" viewBox=" 0 0  150 100 " width="150"><!--Created with love!--><defs><ellipse cx="50" cy="50.0" rx="50.00" ry="auto" fill="black" id="circle"/></defs><g><use href="#circle" transform="skewX(16)"/><rect id="useless" width="0" height="0" fill="#ff0000"/></g>",
    },
    "line": 1,
    "message": "Replace \`⏎<svg·xmlns="http://www.w3.org/2000/svg"·viewBox="·0·0··150·100·"·width="150">⏎··<!--·Created·with·love!·-->⏎··<defs>⏎····<ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle"/>⏎··</defs>⏎··<g>⏎····<use·href="#circle"·transform="skewX(16)"/>⏎····<rect·id="useless"·width="0"·height="0"·fill="#ff0000"/>⏎··</g>⏎\` with \`<svg·xmlns="http://www.w3.org/2000/svg"·viewBox="·0·0··150·100·"·width="150"><!--Created·with·love!--><defs><ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle"/></defs><g><use·href="#circle"·transform="skewX(16)"/><rect·id="useless"·width="0"·height="0"·fill="#ff0000"/></g>\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #2: js2svg indent 4 1`] = `
[
  {
    "column": 1,
    "endColumn": 27,
    "endLine": 3,
    "fix": {
      "range": [
        117,
        143,
      ],
      "text": "<!--Created with love!",
    },
    "line": 3,
    "message": "Replace \`··<!--·Created·with·love!·\` with \`<!--Created·with·love!\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 4,
    "fix": {
      "range": [
        147,
        149,
      ],
      "text": "    ",
    },
    "line": 4,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 5,
    "fix": {
      "range": [
        156,
        156,
      ],
      "text": "    ",
    },
    "line": 5,
    "message": "Insert \`····\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 3,
    "endLine": 6,
    "fix": {
      "range": [
        237,
        237,
      ],
      "text": "  ",
    },
    "line": 6,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 7,
    "fix": {
      "range": [
        245,
        247,
      ],
      "text": "    ",
    },
    "line": 7,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 8,
    "fix": {
      "range": [
        251,
        251,
      ],
      "text": "    ",
    },
    "line": 8,
    "message": "Insert \`····\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 5,
    "endLine": 9,
    "fix": {
      "range": [
        299,
        303,
      ],
      "text": "        ",
    },
    "line": 9,
    "message": "Replace \`····\` with \`········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 3,
    "endLine": 10,
    "fix": {
      "range": [
        362,
        362,
      ],
      "text": "  ",
    },
    "line": 10,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        373,
        373,
      ],
      "text": "
",
    },
    "line": 11,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #3: default preset-default 1`] = `
[
  {
    "column": 1,
    "endColumn": 29,
    "endLine": 3,
    "fix": {
      "range": [
        0,
        145,
      ],
      "text": "<svg xmlns="http://www.w3.org/2000/svg" width="150" viewBox="0 0 150 100"",
    },
    "line": 1,
    "message": "Replace \`<?xml·version="1.0"·encoding="UTF-8"?>⏎<svg·xmlns="http://www.w3.org/2000/svg"·viewBox="·0·0··150·100·"·width="150">⏎··<!--·Created·with·love!·--\` with \`<svg·xmlns="http://www.w3.org/2000/svg"·width="150"·viewBox="0·0·150·100"\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 76,
    "endLine": 5,
    "fix": {
      "range": [
        161,
        231,
      ],
      "text": "circle id="a" cx="50" cy="50" r="50" fill="#000",
    },
    "line": 5,
    "message": "Replace \`ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle\` with \`circle·id="a"·cx="50"·cy="50"·r="50"·fill="#000\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 23,
    "endLine": 8,
    "fix": {
      "range": [
        248,
        273,
      ],
      "text": "use href="#a",
    },
    "line": 7,
    "message": "Replace \`g>⏎····<use·href="#circle\` with \`use·href="#a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        299,
        373,
      ],
      "text": "</svg>
",
    },
    "line": 9,
    "message": "Replace \`····<rect·id="useless"·width="0"·height="0"·fill="#ff0000"/>⏎··</g>⏎</svg>\` with \`</svg>⏎\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #4: preset-default disable cleanupIds 1`] = `
[
  {
    "column": 1,
    "endColumn": 29,
    "endLine": 3,
    "fix": {
      "range": [
        0,
        145,
      ],
      "text": "<svg xmlns="http://www.w3.org/2000/svg" width="150" viewBox="0 0 150 100"",
    },
    "line": 1,
    "message": "Replace \`<?xml·version="1.0"·encoding="UTF-8"?>⏎<svg·xmlns="http://www.w3.org/2000/svg"·viewBox="·0·0··150·100·"·width="150">⏎··<!--·Created·with·love!·--\` with \`<svg·xmlns="http://www.w3.org/2000/svg"·width="150"·viewBox="0·0·150·100"\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 76,
    "endLine": 5,
    "fix": {
      "range": [
        161,
        231,
      ],
      "text": "circle id="circle" cx="50" cy="50" r="50" fill="#000",
    },
    "line": 5,
    "message": "Replace \`ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle\` with \`circle·id="circle"·cx="50"·cy="50"·r="50"·fill="#000\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 8,
    "fix": {
      "range": [
        245,
        253,
      ],
      "text": "",
    },
    "line": 7,
    "message": "Delete \`··<g>⏎··\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        299,
        373,
      ],
      "text": "</svg>
",
    },
    "line": 9,
    "message": "Replace \`····<rect·id="useless"·width="0"·height="0"·fill="#ff0000"/>⏎··</g>⏎</svg>\` with \`</svg>⏎\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #5: preset-default with cleanupIds params 1`] = `
[
  {
    "column": 1,
    "endColumn": 29,
    "endLine": 3,
    "fix": {
      "range": [
        0,
        145,
      ],
      "text": "<svg xmlns="http://www.w3.org/2000/svg" width="150" viewBox="0 0 150 100"",
    },
    "line": 1,
    "message": "Replace \`<?xml·version="1.0"·encoding="UTF-8"?>⏎<svg·xmlns="http://www.w3.org/2000/svg"·viewBox="·0·0··150·100·"·width="150">⏎··<!--·Created·with·love!·--\` with \`<svg·xmlns="http://www.w3.org/2000/svg"·width="150"·viewBox="0·0·150·100"\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 76,
    "endLine": 5,
    "fix": {
      "range": [
        161,
        231,
      ],
      "text": "circle id="circle" cx="50" cy="50" r="50" fill="#000",
    },
    "line": 5,
    "message": "Replace \`ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle\` with \`circle·id="circle"·cx="50"·cy="50"·r="50"·fill="#000\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 8,
    "fix": {
      "range": [
        245,
        253,
      ],
      "text": "",
    },
    "line": 7,
    "message": "Delete \`··<g>⏎··\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        299,
        373,
      ],
      "text": "</svg>
",
    },
    "line": 9,
    "message": "Replace \`····<rect·id="useless"·width="0"·height="0"·fill="#ff0000"/>⏎··</g>⏎</svg>\` with \`</svg>⏎\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #6: plugin cleanupIds name 1`] = `
[
  {
    "column": 9,
    "endColumn": 22,
    "endLine": 2,
    "fix": {
      "range": [
        83,
        96,
      ],
      "text": "",
    },
    "line": 2,
    "message": "Delete \`id="useless"·\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 3,
    "fix": {
      "range": [
        140,
        140,
      ],
      "text": "
",
    },
    "line": 3,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #7: plugin cleanupIds object 1`] = `
[
  {
    "column": 9,
    "endColumn": 22,
    "endLine": 2,
    "fix": {
      "range": [
        83,
        96,
      ],
      "text": "",
    },
    "line": 2,
    "message": "Delete \`id="useless"·\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 3,
    "fix": {
      "range": [
        140,
        140,
      ],
      "text": "
",
    },
    "line": 3,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #8: plugin cleanupIds with params 1`] = `
[
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 3,
    "fix": {
      "range": [
        140,
        140,
      ],
      "text": "
",
    },
    "line": 3,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #9: svgoConfig default 1`] = `
[
  {
    "column": 1,
    "endColumn": 27,
    "endLine": 3,
    "fix": {
      "range": [
        117,
        143,
      ],
      "text": "<!--Created with love!",
    },
    "line": 3,
    "message": "Replace \`··<!--·Created·with·love!·\` with \`<!--Created·with·love!\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 4,
    "fix": {
      "range": [
        147,
        149,
      ],
      "text": "    ",
    },
    "line": 4,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 76,
    "endLine": 5,
    "fix": {
      "range": [
        156,
        231,
      ],
      "text": "        <ellipse cx="50" cy="50.0" rx="50.00" ry="auto" fill="black" id="a",
    },
    "line": 5,
    "message": "Replace \`····<ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle\` with \`········<ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 6,
    "fix": {
      "range": [
        235,
        235,
      ],
      "text": "  ",
    },
    "line": 6,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 7,
    "fix": {
      "range": [
        245,
        247,
      ],
      "text": "    ",
    },
    "line": 7,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 23,
    "endLine": 8,
    "fix": {
      "range": [
        251,
        273,
      ],
      "text": "        <use href="#a",
    },
    "line": 8,
    "message": "Replace \`····<use·href="#circle\` with \`········<use·href="#a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 24,
    "endLine": 9,
    "fix": {
      "range": [
        303,
        322,
      ],
      "text": "    <rect ",
    },
    "line": 9,
    "message": "Replace \`<rect·id="useless"·\` with \`····<rect·\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 3,
    "endLine": 10,
    "fix": {
      "range": [
        362,
        362,
      ],
      "text": "  ",
    },
    "line": 10,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        373,
        373,
      ],
      "text": "
",
    },
    "line": 11,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #10: svgoConfig config path 1`] = `
[
  {
    "column": 1,
    "endColumn": 27,
    "endLine": 3,
    "fix": {
      "range": [
        117,
        143,
      ],
      "text": "<!--Created with love!",
    },
    "line": 3,
    "message": "Replace \`··<!--·Created·with·love!·\` with \`<!--Created·with·love!\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 4,
    "fix": {
      "range": [
        147,
        149,
      ],
      "text": "    ",
    },
    "line": 4,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 76,
    "endLine": 5,
    "fix": {
      "range": [
        156,
        231,
      ],
      "text": "        <ellipse cx="50" cy="50.0" rx="50.00" ry="auto" fill="black" id="a",
    },
    "line": 5,
    "message": "Replace \`····<ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="circle\` with \`········<ellipse·cx="50"·cy="50.0"·rx="50.00"·ry="auto"·fill="black"·id="a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 1,
    "endLine": 6,
    "fix": {
      "range": [
        235,
        235,
      ],
      "text": "  ",
    },
    "line": 6,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 7,
    "fix": {
      "range": [
        245,
        247,
      ],
      "text": "    ",
    },
    "line": 7,
    "message": "Replace \`··\` with \`····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 23,
    "endLine": 8,
    "fix": {
      "range": [
        251,
        273,
      ],
      "text": "        <use href="#a",
    },
    "line": 8,
    "message": "Replace \`····<use·href="#circle\` with \`········<use·href="#a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 24,
    "endLine": 9,
    "fix": {
      "range": [
        303,
        322,
      ],
      "text": "    <rect ",
    },
    "line": 9,
    "message": "Replace \`<rect·id="useless"·\` with \`····<rect·\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 3,
    "endLine": 10,
    "fix": {
      "range": [
        362,
        362,
      ],
      "text": "  ",
    },
    "line": 10,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
  {
    "column": 7,
    "endColumn": 7,
    "endLine": 11,
    "fix": {
      "range": [
        373,
        373,
      ],
      "text": "
",
    },
    "line": 11,
    "message": "Insert \`⏎\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #11: invalid 1`] = `
[
  {
    "column": 6,
    "line": 1,
    "message": "SvgoParserError: Unclosed root tag",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;

exports[`svgo > invalid > Invalid #12: not svg 1`] = `
[
  {
    "column": 2,
    "line": 1,
    "message": "SvgoParserError: Non-whitespace before first tag.",
    "nodeType": null,
    "ruleId": "svgo",
    "severity": 2,
  },
]
`;
